# PIPELINE

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  test.py
app/: config.py  db.py  email.py  file.py  logging.py  main.py  tasks.py
app/templates/: index.html  results.html
app/templates/emails/src/: notification.mjml
