[project]
name = "PIPELINE"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "celery>=5.5.2",
    "emails>=0.6",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.59",
    "langchain-ollama>=0.3.2",
    "langchainhub>=0.1.21",
    "langgraph>=0.4.3",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "redis>=6.1.0",
]
