[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.2",
    "celery-types>=0.23.0",
    "cloudinary>=1.44.0",
    "coverage>=7.8.0",
    "emails>=0.6",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.59",
    "langchain-ollama>=0.3.2",
    "langchainhub>=0.1.21",
    "langgraph>=0.4.3",
    "opencv-python>=4.11.0.86",
    "psycopg2>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "redis>=6.1.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]
